Fix bug where Remove User button was not showing after initial click.

Bug: 845657
Change-Id: I9f7ea848fc469d06cfbbdf91c97260ff95ac9033
Reviewed-on: https://chromium-review.googlesource.com/1112750
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571696}
Former-commit-id: 03bddaa3e7decc024cd5d878b7db9cf7be4e6887